# plover-bulgarian

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
bulgarian/: system.py
